--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.4.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/inter": "^4.5.14",
     "@next/font": "13.1.2",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
@@ -21,6 +22,7 @@
     "framer-motion": "^8.4.2",
     "next": "13.1.2",
     "react": "18.2.0",
+    "react-background-image": "^2.0.1",
     "react-dom": "18.2.0"
   }
 }
