--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-background-image": "^2.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "validator": "^13.7.0",
     "zustand": "^4.3.2"
   }
 }
