--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-background-image": "^2.0.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "validator": "^13.7.0",
