--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.2",
+    "js-cookie": "^3.0.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-background-image": "^2.0.1",
