--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^8.4.2",
     "js-cookie": "^3.0.1",
     "next": "13.1.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-background-image": "^2.0.1",
     "react-countdown": "^2.3.5",
