--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.1",
     "next": "13.1.2",
     "nextjs-progressbar": "^0.0.16",
+    "node-format-date": "^1.0.9",
     "react": "18.2.0",
     "react-background-image": "^2.0.1",
     "react-countdown": "^2.3.5",
