--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.2",
     "nextjs-progressbar": "^0.0.16",
     "node-format-date": "^1.0.9",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-background-image": "^2.0.1",
     "react-countdown": "^2.3.5",
