--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "socket.io-client": "^4.6.1",
     "validator": "^13.7.0",
     "zustand": "^4.3.2"
   }
