--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.2",
+    "get-user-media-promise": "^1.1.4",
     "js-cookie": "^3.0.1",
+    "microphone-stream": "^6.0.1",
     "next": "13.1.2",
     "nextjs-progressbar": "^0.0.16",
     "node-format-date": "^1.0.9",
